# factory_game

./: .gitignore  CMakeLists.txt  LICENSE  README.md  dr.json  imgui_test.cpp  main.cpp
data/: recipe.json
schemas/: recipe.schema.json
schemas/types/: resources.json
src/: core.cpp  core.h  factory.h  serialization.cpp  serialization.h  sim.cpp  sim.h  storage.cpp  storage.h
src/autogenerated/: recipes.h  resources.h
src/dsl/: dsl.h  examples.cpp  examples.h
src/game/: factory_detail.h  factory_overview.h  game.h  navigation.h
src/tools/: defer.h  format.h  generators.cpp  generators.h  gui.cpp  gui.h
tests/: CMakeLists.txt  belt_tests.cpp  extractor_tests.cpp  factory_tests.cpp  gameworld_tests.cpp  integration_tests.cpp  json_tests.cpp  machine_tests.cpp  merger_tests.cpp  one_one_connection_tests.cpp  recipe_tests.cpp  reconnect_links_tests.cpp  removal_tests.cpp  single_machine_tests.cpp  splitter_tests.cpp  stack_tests.cpp  storage_tests.cpp
